apps/servarr/radarr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  replicas: 1
  serviceName: radarr
  selector:
    matchLabels:
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/name: radarr
    spec:
      containers:
        - name: radarr
          image: radarr
          ports:
            - name: http
              containerPort: 7878
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 360
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: run
              mountPath: /run
          securityContext:
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETGID
                - SETUID
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: rclone-config
          configMap:
            name: radarr-rclone
        - name: startup-config
          secret:
            secretName: radarr
        - name: run
          emptyDir:
            medium: Memory
